--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   auto_size_text: ^3.0.0
   responsive_framework: ^0.1.7
+  timeline_tile: ^2.0.0
+  flutter_staggered_grid_view: ^0.6.1
+  popup_shape: ^0.0.1
 
 dev_dependencies:
   flutter_test:
