--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   timeline_tile: ^2.0.0
   flutter_staggered_grid_view: ^0.6.1
   popup_shape: ^0.0.1
+  flutter_vector_icons: ^1.0.0
 
 dev_dependencies:
   flutter_test:
