--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   flutter_staggered_grid_view: ^0.6.1
   popup_shape: ^0.0.1
   flutter_vector_icons: ^1.0.0
+  get: ^4.6.1
+  flutter_svg: ^1.0.3
+  percent_indicator: ^4.0.0
+  carousel_slider: ^4.0.0
+
 
 dev_dependencies:
   flutter_test:
@@ -81,17 +86,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: ProximaNova-Regular
+      fonts:
+        - asset: assets/fonts/ProximaNovaFont.otf
+    - family: SourceSansPro
+      fonts:
+        - asset: assets/fonts/SourceSansPro.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
