--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.6.1
   popup_shape: ^0.0.1
   flutter_vector_icons: ^1.0.0
+  get: ^4.6.1
 
 dev_dependencies:
   flutter_test:
