pop up card add

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   percent_indicator: ^4.0.0
   carousel_slider: ^4.0.0
   seo_renderer: ^0.6.0
+  image_picker: ^0.8.5
+  dropdown_button2: ^1.4.0
 
 
 dev_dependencies:
