--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   image_picker: ^0.8.5
   dropdown_button2: ^1.4.0
   http: ^0.13.4
+  font_awesome_flutter: ^10.1.0
+  url_launcher: ^6.1.0
 
 
 dev_dependencies:
