[Login] Login update

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   http: ^0.13.4
   font_awesome_flutter: ^10.1.0
   url_launcher: ^6.1.0
+  get_storage:
+  dio: ^4.0.4
+  quiver: ^3.0.1+1
 
 
 
