redesign profile page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,8 +78,18 @@ flutter:
         - asset: assets/fonts/ProximaNovaFont.otf
     - family: SourceSansPro
       fonts:
-        - asset: assets/fonts/SourceSansPro.ttf
-
+        - asset: assets/fonts/SourceSansPro-Light.ttf
+          weight: 200
+        - asset: assets/fonts/SourceSansPro-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/SourceSansPro-SemiBold.ttf
+          weight: 500
+        # - asset: assets/fonts/SourceSansPro-Medium.ttf
+        #   weight: 600
+        - asset: assets/fonts/SourceSansPro-Bold.ttf
+          weight: 600
+        # - asset: assets/fonts/SourceSansPro-ExtraBold.ttf
+        #   weight: 900
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
