--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,8 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/icons/svg/
-  #   - images/a_dot_ham.jpeg
+    - assets/icons/svgicons/
+  #   - images/a_dot_ham.jpeg.      svgicons
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
