--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   popover: ^0.2.6+3
   flutter_spinkit: ^5.1.0
   flutter_expanded_tile: ^0.3.6
+  video_player: ^2.4.5
+  video_player_web: ^2.0.10
 
 dev_dependencies:
   integration_test:
