--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   flutter_expanded_tile: ^0.3.6
   video_player: ^2.4.5
   video_player_web: ^2.0.10
+  # cloudinary_public: ^0.11.1
+  image_picker_web: ^2.1.1
+  cloudinary_sdk: ^4.0.1+9
 
 dev_dependencies:
   integration_test:
