--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,11 @@ dependencies:
   flutter_expanded_tile: ^0.3.6
   video_player: ^2.4.5
   video_player_web: ^2.0.10
-  # cloudinary_public: ^0.11.1
-  image_picker_web: ^2.1.1
   cloudinary_sdk: ^4.0.1+9
+  tap_canvas: ^0.9.4
+  cached_network_image: ^3.2.1
+  awesome_dialog: ^2.2.1
+  animated: ^2.0.0
 
 dev_dependencies:
   integration_test:
