--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,8 @@ dependencies:
   cached_network_image: ^3.2.1
   awesome_dialog: ^2.2.1
   animated: ^2.0.0
-  should_rebuild: ^1.0.1
+  video_thumbnail: ^0.5.0
+  form_field_validator: ^1.1.0
 
 dev_dependencies:
   integration_test:
