[Update] install intercom for web and android

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   responsive_framework: ^0.1.9
   popover: ^0.2.6+3
   flutter_spinkit: ^5.1.0
+  intercom_flutter: ^7.3.0
 
 dev_dependencies:
   integration_test:
