--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   video_thumbnail: ^0.5.0
   form_field_validator: ^1.1.0
   freezed_annotation: ^0.15.0
+  flutter_riverpod: ^1.0.4
 
 dev_dependencies:
   integration_test:
