--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,7 @@ windows/flutter/generated_plugin_registrant.cc
 windows/flutter/generated_plugin_registrant.h
 windows/flutter/generated_plugins.cmake
 macos/Flutter/GeneratedPluginRegistrant.swift
+
+# "JSON to Dart Model" generator tracker files locations.
+/.json_models/
+models.jsonc
