--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   timeline_tile: ^2.0.0
   flutter_staggered_grid_view: ^0.6.1
   flutter_vector_icons: ^1.0.0
-  get: ^4.6.1
+  get: 4.6.1
   flutter_svg: ^1.0.3
   percent_indicator: ^4.0.0
   carousel_slider: ^4.0.0
