--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   timeline_tile: ^2.0.0
   flutter_staggered_grid_view: ^0.6.1
   flutter_vector_icons: ^1.0.0
-  get: 4.6.1
+  get: ^4.6.5
   flutter_svg: ^1.0.3
   percent_indicator: ^4.0.0
   carousel_slider: ^4.0.0
@@ -30,9 +30,8 @@ dependencies:
   routemaster: ^1.0.0
   provider: ^6.0.3
   flutter_cache_manager: ^3.3.0
-  dio_http_cache: ^0.3.0
   flutter_html: ^3.0.0-alpha.3
-  responsive_framework: ^0.1.9
+  responsive_framework: ^0.2.0
   popover: ^0.2.6+3
   flutter_spinkit: ^5.1.0
   flutter_expanded_tile: ^0.3.6
@@ -45,11 +44,17 @@ dependencies:
   animated: ^2.0.0
   video_thumbnail: ^0.5.0
   form_field_validator: ^1.1.0
-  freezed_annotation: ^0.15.0
+  freezed_annotation: ^2.1.0
   intercom_flutter: ^7.3.0
-  flutter_webview_plugin: ^0.4.0
   webview_flutter: ^3.0.4
   flat: ^0.4.1
+  matrix: ^0.11.1
+  flutter_olm: ^1.2.0
+  flutter_openssl_crypto: ^0.1.0
+  path_provider: ^2.0.11
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+
 
 dev_dependencies:
   integration_test:
@@ -59,7 +64,7 @@ dev_dependencies:
   flutter_driver:
     sdk: flutter
   build_runner:
-  freezed: ^0.14.2
+  freezed: ^2.1.0+1
   # json_serializable: ^6.1.5
 
 # For information on the generic Dart part of this file, see the
