--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,40 +13,40 @@ dependencies:
   cupertino_icons: ^1.0.5
   auto_size_text: ^3.0.0
   timeline_tile: ^2.0.0
-  flutter_staggered_grid_view: ^0.6.1
+  flutter_staggered_grid_view: ^0.6.2
   flutter_vector_icons: ^1.0.0
   get: ^4.6.5
-  flutter_svg: ^1.0.3
-  percent_indicator: ^4.0.0
-  carousel_slider: ^4.0.0
+  flutter_svg: ^0.23.0+1
+  percent_indicator: ^4.2.2
+  carousel_slider: ^4.1.1
   seo_renderer: ^0.6.0
-  image_picker: ^0.8.5
-  dropdown_button2: ^1.4.0
-  http: ^0.13.4
+  image_picker: ^0.8.5+3
+  dropdown_button2: ^1.7.1
+  http: ^0.13.5
   font_awesome_flutter: ^10.1.0
-  url_launcher: ^6.1.0
-  get_storage:
-  dio: ^4.0.4
-  routemaster: ^1.0.0
+  url_launcher: ^6.1.5
+  get_storage: ^2.0.3
+  dio: ^4.0.6
+  routemaster: ^1.0.1
   provider: ^6.0.3
   flutter_cache_manager: ^3.3.0
-  flutter_html: ^3.0.0-alpha.3
+  flutter_html: ^2.2.1
   responsive_framework: ^0.2.0
   popover: ^0.2.6+3
   flutter_spinkit: ^5.1.0
   flutter_expanded_tile: ^0.3.6
   video_player: ^2.4.5
-  video_player_web: ^2.0.10
-  cloudinary_sdk: ^4.0.1+9
+  video_player_web: ^2.0.12
+  cloudinary_sdk: ^4.0.2+10
   tap_canvas: ^0.9.4
   cached_network_image: ^3.2.1
   awesome_dialog: ^2.2.1
   animated: ^2.0.0
-  video_thumbnail: ^0.5.0
+  video_thumbnail: ^0.5.2
   form_field_validator: ^1.1.0
   freezed_annotation: ^2.1.0
   intercom_flutter: ^7.3.0
-  webview_flutter: ^3.0.4
+  webview_flutter: ^2.8.0
   flat: ^0.4.1
   matrix: ^0.11.1
   flutter_olm: ^1.2.0
@@ -55,7 +55,6 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
 
-
 dev_dependencies:
   integration_test:
     sdk: flutter
@@ -63,7 +62,7 @@ dev_dependencies:
     sdk: flutter
   flutter_driver:
     sdk: flutter
-  build_runner:
+  build_runner: ^2.2.0
   freezed: ^2.1.0+1
   # json_serializable: ^6.1.5
 
