--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   path_provider: ^2.0.11
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  build_web_compilers: ^3.2.5
 
 dev_dependencies:
   integration_test:
